2008-03-09  Dmitry Xmelkov  <dmix@gmail.ru>

	* include/avr/eeprom.h: eeprom_write_byte(): add EECR clearning
	to force erase_and_write programming mode. Document this and add
	note about necessarity SELFPRGEN polling.

2008-03-08  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #22493.
	* include/avr/iom1284p.h: Fix typo.

2008-03-03  Anatoly Sokolov <aesok@post.ru>

	* devtools/gen-avr-lib-tree.sh: Use devtools/Device.am as template 
	for dev/Makefile.am.
	* devtools/Device.am: New file.

2008-03-02  Dmitry Xmelkov  <dmix@gmail.ru>

	* include/avr/eeprom.h: Change cast operation to avoid warning
	with '-Wsystem-headers' option.
	* tests/simulate/avr/eeprom-1.c: Add comment about avr-gcc 4.2.2 bug.
	Note, avr-gcc 4.2.3 is correct.
	* tests/simulate/regression/bug-31644.c: New file.

2008-03-01  Dmitry Xmelkov  <dmix@gmail.ru>

	New variant of EEPROM functions: inline byte procedures and library
	multibyte envelopes.
	* include/avr/eeprom.h: Rewrite on the base of project by Eric B.
	Weddington.
	* libc/misc/eeprom.S: Remove file.
	* libc/misc/ee_rb.S: Remove file.
	* libc/misc/ee_rblk.S: Remove file.
	* libc/misc/ee_rw.S: Remove file.
	* libc/misc/ee_wb.S: Remove file.
	* libc/misc/ee_wblk.S: Remove file.
	* libc/misc/ee_ww.S: Remove file.
	* libc/misc/eerd_block.c: New file.
	* libc/misc/eerd_dword.c: New file.
	* libc/misc/eerd_word.c: New file.
	* libc/misc/eewr_block.c: New file.
	* libc/misc/eewr_dword.c: New file.
	* libc/misc/eewr_word.c: New file.
	* libc/misc/Files.am: Remove old sources, add new.
	* libc/misc/Makefile.am: Include $(misc_a_c_sources) to EXTRA_DIST.
	* libc/misc/Rules.am: Remove rules to build chip-specific objects.
	* tests/simulate/avr: New directory (for AVR-specific functions).
	* tests/simulate/avr/eeprom-1.c: New file.
	* tests/simulate/runtest.sh: Add 'avr/*.c' to default test list.
	Add $MCU_LIST_FULL for AVR-specific testing.
	* NEWS: Notes about EEPROM changes and fixed bug.
