@@ -1,0 +1,102 @@
+# Copyright (c) 2004,  Theodore A. Roth
+# Copyright (c) 2005, 2008  Anatoly Sokolov
+# All rights reserved.
+#
+# Redistribution and use in source and binary forms, with or without
+# modification, are permitted provided that the following conditions are met:
+#
+# * Redistributions of source code must retain the above copyright
+#   notice, this list of conditions and the following disclaimer.
+# * Redistributions in binary form must reproduce the above copyright
+#   notice, this list of conditions and the following disclaimer in
+#   the documentation and/or other materials provided with the
+#   distribution.
+# * Neither the name of the copyright holders nor the names of
+#   contributors may be used to endorse or promote products derived
+#   from this software without specific prior written permission.
+#
+# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
+# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
+# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
+# ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
+# LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
+# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
+# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
+# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
+# POSSIBILITY OF SUCH DAMAGE.
+#
+
+SUBDIRS = <<dev_subdirs>>
+
+AVR_TARGET          = <<arh>>
+AVR_TARGET_DEFS     = <<lib_defs>>
+AVR_TARGET_CFLAGS   = <<lib_cflags>>
+AVR_TARGET_ASFLAGS  = <<lib_asflags>>
+AVR_INSTALL_DIR     = <<install_dir>>
+
+VPATH = $(top_srcdir)/libc/stdlib:$(top_srcdir)/libc/pmstring:$(top_srcdir)/libc/string:$(top_srcdir)/libc/misc:$(top_srcdir)/libc/stdio:$(top_srcdir)/libm/fplib
+
+if HAS_<<arh>>
+
+AM_CPPFLAGS = -I$(top_srcdir)/common -I$(top_srcdir)/include
+
+AVRLIB_CFLAGS = -g -Wall -W -Wstrict-prototypes -mmcu=$(AVR_TARGET) $(AVR_TARGET_DEFS) $(AVR_TARGET_CFLAGS)
+
+AVRLIB_ASFLAGS = -x assembler-with-cpp -Wa,-gstabs -mmcu=$(AVR_TARGET) $(AVR_TARGET_DEFS) $(AVR_TARGET_ASFLAGS)
+
+AM_CFLAGS = $(AVRLIB_CFLAGS)
+AM_CCASFLAGS = $(AM_CPPFLAGS) $(AVRLIB_ASFLAGS)
+
+__install_dir = $(prefix)/avr/lib/$(AVR_INSTALL_DIR)
+
+avrdir = $(__install_dir)
+avrlibdir = $(__install_dir)
+
+avr_LIBRARIES = \
+	libc.a \
+	libprintf_min.a \
+	libprintf_flt.a \
+	libscanf_min.a \
+	libscanf_flt.a \
+	libm.a
+
+include $(top_srcdir)/libc/stdlib/Rules.am
+include $(top_srcdir)/libc/pmstring/Rules.am
+include $(top_srcdir)/libc/string/Rules.am
+include $(top_srcdir)/libc/misc/Rules.am
+include $(top_srcdir)/libc/stdio/Rules.am
+include $(top_srcdir)/libm/fplib/Rules.am
+
+nodist_libc_a_SOURCES = \
+	$(stdlib_a_c_sources) \
+	$(stdlib_a_asm_sources) \
+	$(pmstring_a_c_sources) \
+	$(pmstring_a_asm_sources) \
+	$(string_a_c_sources) \
+	$(string_a_asm_sources) \
+	$(misc_a_c_sources) \
+	$(misc_a_asm_sources) \
+	$(stdio_a_c_sources) \
+	$(stdio_a_asm_sources) \
+	$(libm_a_c_sources) \
+	$(libm_a_asm_sources)
+
+nodist_libm_a_SOURCES = \
+	$(libm_a_c_sources) \
+	$(libm_a_asm_sources)
+
+libc_a_LIBADD = \
+	$(stdio_a_libadd) \
+	$(misc_a_libadd)
+
+libc_a_DEPENDENCIES = \
+	$(stdio_a_libadd) \
+	$(misc_a_libadd)
+
+else
+
+echo all distdir install installdirs clean distclean uninstall check:
+
+endif
