@@ -41,82 +41,6 @@
 # the AUTHORS file in the current dir and the parent. After that, we complain
 # and fatal error out.
 
-top_dir="UNKNOWN"
-
-if test -e AUTHORS
-then
-	top_dir="$PWD"
-else
-	cd ..
-	if test -e AUTHORS
-	then
-		top_dir="$PWD"
-	fi
-fi
-
-if test $top_dir = "UNKNOWN"
-then
-	echo "Can't determine the top level source dir. Aborting."
-	exit 1
-fi
-
-test -d avr || mkdir avr
-test -d avr/lib || mkdir avr/lib
-
-cd avr || exit 1
-
-TMP_COPY_RIGHT_HDR="$PWD/tmp_copy_right_hdr"
-
-cat > ${TMP_COPY_RIGHT_HDR} <<EOF
-# Copyright (c) 2004,  Theodore A. Roth
-# Copyright (c) 2005,  Anatoly Sokolov
-# All rights reserved.
-#
-# Redistribution and use in source and binary forms, with or without
-# modification, are permitted provided that the following conditions are met:
-#
-# * Redistributions of source code must retain the above copyright
-#   notice, this list of conditions and the following disclaimer.
-# * Redistributions in binary form must reproduce the above copyright
-#   notice, this list of conditions and the following disclaimer in
-#   the documentation and/or other materials provided with the
-#   distribution.
-# * Neither the name of the copyright holders nor the names of
-#   contributors may be used to endorse or promote products derived
-#   from this software without specific prior written permission.
-#
-# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
-# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
-# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
-# ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
-# LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
-# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
-# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
-# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
-# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
-# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
-# POSSIBILITY OF SUCH DAMAGE.
-#
-
-##
-## NOTE: This file was generated by the gen-avr-lib-tree.sh script found in
-## the devtools/ directory of the avr-libc source. If you find that this file
-## needs modification, please make the changes in the generator script. To
-## propagate the changes, be sure to run the generator script from the top
-## level directory of the source tree. (HINT: Your next build will proceed
-## much faster if you then re-run the bootstrap script.)
-##
-
-EOF
-
-# Create the avr/Makefile.am file.
-cat ${TMP_COPY_RIGHT_HDR} > Makefile.am
-cat >> Makefile.am << EOF
-SUBDIRS = lib
-EOF
-
-cd lib || exit 1
-
 # Define the special flags for special sub-targets.
 
 CFLAGS_SPACE="-mcall-prologues -Os"
@@ -290,8 +214,32 @@ avr6:AVR6_DEV_INFO:${LIB_DEFS}:${CFLAGS_SPACE}:${DEV_ASFLAGS}\
 
 echo "Generating source directories:"
 
+top_dir="UNKNOWN"
+
+if test -e AUTHORS
+then
+	top_dir="$PWD"
+else
+	cd ..
+	if test -e AUTHORS
+	then
+		top_dir="$PWD"
+	fi
+fi
+
+if test $top_dir = "UNKNOWN"
+then
+	echo "Can't determine the top level source dir. Aborting."
+	exit 1
+fi
+
+test -d avr || mkdir avr
+test -d avr/lib || mkdir avr/lib
+
+cd avr/lib || exit 1
+
 IFS=';'
-ARH_SUBDIRS="SUBDIRS ="
+ARH_SUBDIRS=""
 
 for ath_lib in $AVR_ARH_INFO
 do
@@ -300,7 +248,7 @@ do
 	lib_defs=$(echo $ath_lib | cut -d ':' -f 3)
 	lib_cflags=$(echo $ath_lib | cut -d ':' -f 4)
 	lib_asflags=$(echo $ath_lib | cut -d ':' -f 5)
-	
+
 	install_dir=$arh
 	if [ $arh = avr2 ]
 	then
@@ -312,10 +260,7 @@ do
 	test -d $arh || mkdir $arh
 	cd $arh || exit 1
 
-	ARH_SUBDIRS="$ARH_SUBDIRS \\\\\n   $arh"
-
-
-	DEV_SUBDIRS="SUBDIRS ="
+	DEV_SUBDIRS=""
 
 	eval DEV_INFO=\"\$\{$dev_info\}\"
 
@@ -326,73 +271,44 @@ do
 		crt_defs=$(echo $dev_crt | cut -d ':' -f 3)
 		crt_cflags=$(echo $dev_crt | cut -d ':' -f 4)
 		crt_asflags=$(echo $dev_crt | cut -d ':' -f 5)
-		
+
 		echo "  avr/lib/$arh/$dev"
 
 		test -d $dev || mkdir $dev
 
 		cat $top_dir/devtools/Device.am > $dev/Makefile.am
 
-		sed -e "s/<<dev>>/$dev/g" $dev/Makefile.am \
-		> $dev/tempfile && mv -f $dev/tempfile $dev/Makefile.am
-
-		sed -e "s/<<crt>>/$crt/g" $dev/Makefile.am \
-		> $dev/tempfile && mv -f $dev/tempfile $dev/Makefile.am
-
-		sed -e "s/<<crt_defs>>/$crt_defs/g" $dev/Makefile.am \
-		> $dev/tempfile && mv -f $dev/tempfile $dev/Makefile.am
-
-		sed -e "s/<<crt_cflags>>/$crt_cflags/g" $dev/Makefile.am \
-		> $dev/tempfile && mv -f $dev/tempfile $dev/Makefile.am
-
-		sed -e "s/<<crt_asflags>>/$crt_asflags/g" $dev/Makefile.am \
-		> $dev/tempfile && mv -f $dev/tempfile $dev/Makefile.am
-
-		sed -e "s/<<install_dir>>/$install_dir/g" $dev/Makefile.am \
-		> $dev/tempfile && mv -f $dev/tempfile $dev/Makefile.am
+		sed -e "s/<<dev>>/$dev/g" \
+		    -e "s/<<crt>>/$crt/g" \
+		    -e "s/<<crt_defs>>/$crt_defs/g" \
+		    -e "s/<<crt_cflags>>/$crt_cflags/g" \
+		    -e "s/<<crt_asflags>>/$crt_asflags/g"  \
+		    -e "s/<<install_dir>>/$install_dir/g" $dev/Makefile.am \
+		    > $dev/tempfile && mv -f $dev/tempfile $dev/Makefile.am
 
 		DEV_SUBDIRS="$DEV_SUBDIRS \\\\\n   $dev"
 	done
-	
+
+	cat $top_dir/devtools/Architecture.am > Makefile.am
+
+	sed -e "s/<<dev_subdirs>>/$DEV_SUBDIRS/g" \
+	    -e "s/<<arh>>/$arh/g" \
+	    -e "s/<<lib_defs>>/$lib_defs/g" \
+	    -e "s/<<lib_cflags>>/$lib_cflags/g" \
+	    -e "s/<<lib_asflags>>/$lib_asflags/g" \
+	    -e "s/<<install_dir>>/$install_dir/g" Makefile.am \
+	    > tempfile && mv -f tempfile Makefile.am
+
+	ARH_SUBDIRS="$ARH_SUBDIRS \\\\\n   $arh"
+
 	cd ..
-
-	cat ${TMP_COPY_RIGHT_HDR} > $arh/Makefile.am
-	printf "$DEV_SUBDIRS" >> $arh/Makefile.am
-	echo >> $arh/Makefile.am
-	cat >> $arh/Makefile.am <<EOF
-
-AVR_TARGET          = $arh
-AVR_TARGET_CRT      = $crt
-AVR_TARGET_DEFS     = $lib_defs
-AVR_TARGET_CFLAGS   = $lib_cflags
-AVR_TARGET_ASFLAGS  = $lib_asflags
-AVR_INSTALL_DIR     = $install_dir
-
-VPATH = \$(top_srcdir)/crt1:\$(top_srcdir)/libc/stdlib:\$(top_srcdir)/libc/pmstring:\$(top_srcdir)/libc/string:\$(top_srcdir)/libc/misc:\$(top_srcdir)/libc/stdio:\$(top_srcdir)/libm/fplib
-
-if HAS_$arh
-
-# NOTE: Automake will be performing the following include, not GNU Make.
-# Automake will also be scanning the included file.
-
-include \$(top_srcdir)/AvrCommonLibC.am
-
-else
-
-echo all distdir install installdirs clean distclean uninstall check:
-
-endif
-
-EOF
-
-	#printf  $DEV_SUBDIRS
-	#echo 
-
 done
 
-cat ${TMP_COPY_RIGHT_HDR} > Makefile.am
-printf "$ARH_SUBDIRS" >> Makefile.am
-echo >> Makefile.am
+cat $top_dir/devtools/Lib.am > Makefile.am
 
-rm -f ${TMP_COPY_RIGHT_HDR}
+sed -e "s/<<arh_subdirs>>/$ARH_SUBDIRS/g" Makefile.am \
+    > tempfile && mv -f tempfile Makefile.am
 
+cd ..
+
+cat $top_dir/devtools/Avr.am > Makefile.am
