@@ -1,3 +1,12 @@
+2008-03-09  Anatoly Sokolov <aesok@post.ru>
+
+	* devtools/gen-avr-lib-tree.sh: Use 'Avr.am', 'Lib.am' and 
+	'Architecture.am' as template for 'avr/Makefile.am', 
+	'avr/lib/Makefile.am' and 'avr/lib/Architecture/Makefile.am'.
+	* devtools/Architecture.am: New file.
+	* devtools/Avr.am: New file.
+	* devtools/Lib.am: New file.
+
 2008-03-09  Dmitry Xmelkov  <dmix@gmail.ru>
 
 	* include/avr/eeprom.h: eeprom_write_byte(): add EECR clearning
